-- =============================================================================
-- TP Audit / Cartographie / Modélisation
-- Domaine : Emploi, marché du travail et recrutement
-- Fichier : 01_schema.sql
-- Objet   : suppression propre puis création du schéma relationnel 3NF
--           (tables, clés primaires/étrangères, contraintes, index).
-- SGBD cible : PostgreSQL 14+
-- =============================================================================

BEGIN;

-- -----------------------------------------------------------------------------
-- 1. Suppression propre préalable (ordre inverse des dépendances)
-- -----------------------------------------------------------------------------

DROP TABLE IF EXISTS exigence_offre CASCADE;
DROP TABLE IF EXISTS offre CASCADE;
DROP TABLE IF EXISTS competence CASCADE;
DROP TABLE IF EXISTS metier_rome CASCADE;
DROP TABLE IF EXISTS entreprise CASCADE;
DROP TABLE IF EXISTS commune CASCADE;

-- -----------------------------------------------------------------------------
-- 2. Création des tables, contraintes d'intégrité et clés étrangères
-- -----------------------------------------------------------------------------

-- Référentiel géographique (Base Adresse Nationale / codes commune INSEE)
CREATE TABLE commune (
    code_insee   CHAR(5)        PRIMARY KEY,
    code_postal  VARCHAR(5)     NOT NULL,
    nom_commune  VARCHAR(100)   NOT NULL,
    latitude     NUMERIC(9,6),
    longitude    NUMERIC(9,6),
    CONSTRAINT ck_commune_code_insee_format
        CHECK (code_insee ~ '^[0-9][0-9AB][0-9]{3}$'),
    CONSTRAINT ck_commune_code_postal_format
        CHECK (code_postal ~ '^[0-9]{5}$'),
    CONSTRAINT ck_commune_nom_non_vide
        CHECK (btrim(nom_commune) <> ''),
    CONSTRAINT ck_commune_latitude
        CHECK (latitude IS NULL OR latitude BETWEEN -90 AND 90),
    CONSTRAINT ck_commune_longitude
        CHECK (longitude IS NULL OR longitude BETWEEN -180 AND 180)
);

-- Entreprises recruteuses, avec gestion explicite de l'anonymat
CREATE TABLE entreprise (
    entreprise_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    raison_sociale       VARCHAR(250),
    entreprise_anonyme   BOOLEAN NOT NULL DEFAULT FALSE,
    -- Une entreprise non anonyme doit obligatoirement avoir une raison sociale renseignée.
    CONSTRAINT ck_entreprise_raison_sociale_coherente
        CHECK (
            entreprise_anonyme = TRUE
            OR (raison_sociale IS NOT NULL AND btrim(raison_sociale) <> '')
        )
);

-- Référentiel ROME 4.0 (nomenclature des métiers France Travail)
CREATE TABLE metier_rome (
    rome_code               VARCHAR(5) PRIMARY KEY,
    libelle_fiche_metier    VARCHAR(250) NOT NULL,
    domaine_professionnel   VARCHAR(150) NOT NULL,
    CONSTRAINT ck_metier_rome_code_format
        CHECK (rome_code ~ '^[A-Z][0-9]{4}$'),
    CONSTRAINT ck_metier_rome_libelle_non_vide
        CHECK (btrim(libelle_fiche_metier) <> '')
);

-- Compétences techniques (savoir-faire) et comportementales (savoir-être)
CREATE TABLE competence (
    competence_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    libelle_competence    VARCHAR(300) NOT NULL UNIQUE,
    type_competence        VARCHAR(20) NOT NULL,
    CONSTRAINT ck_competence_type_valide
        CHECK (type_competence IN ('Savoir-faire', 'Savoir-être'))
);

-- Offres d'emploi (fait central) issues de l'API France Travail
CREATE TABLE offre (
    offre_id                       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_offre_id                VARCHAR(20)  NOT NULL UNIQUE,
    libelle_poste                  VARCHAR(200) NOT NULL,
    description                    TEXT,
    date_publication                DATE NOT NULL,
    type_contrat                   VARCHAR(5) NOT NULL,
    duree_travail                   VARCHAR(100),
    salaire_brut_annuel_estime      NUMERIC(10,2),
    rome_code                      VARCHAR(5) NOT NULL,
    entreprise_id                  BIGINT NOT NULL,
    code_insee                     CHAR(5) NOT NULL,
    CONSTRAINT fk_offre_metier_rome
        FOREIGN KEY (rome_code) REFERENCES metier_rome (rome_code)
        ON DELETE RESTRICT ON UPDATE CASCADE,
    CONSTRAINT fk_offre_entreprise
        FOREIGN KEY (entreprise_id) REFERENCES entreprise (entreprise_id)
        ON DELETE RESTRICT ON UPDATE CASCADE,
    CONSTRAINT fk_offre_commune
        FOREIGN KEY (code_insee) REFERENCES commune (code_insee)
        ON DELETE RESTRICT ON UPDATE CASCADE,
    CONSTRAINT ck_offre_source_non_vide
        CHECK (btrim(source_offre_id) <> ''),
    CONSTRAINT ck_offre_libelle_non_vide
        CHECK (btrim(libelle_poste) <> ''),
    CONSTRAINT ck_offre_type_contrat_valide
        CHECK (type_contrat IN ('CDI', 'CDD', 'MIS', 'SAI', 'CCE')),
    CONSTRAINT ck_offre_salaire_positif
        CHECK (salaire_brut_annuel_estime IS NULL OR salaire_brut_annuel_estime >= 0)
);

-- Table d'association N,N portant l'attribut d'exigence de la compétence
CREATE TABLE exigence_offre (
    offre_id         BIGINT NOT NULL,
    competence_id    BIGINT NOT NULL,
    statut_exigence   VARCHAR(1) NOT NULL,
    PRIMARY KEY (offre_id, competence_id),
    CONSTRAINT fk_exigence_offre_offre
        FOREIGN KEY (offre_id) REFERENCES offre (offre_id)
        ON DELETE CASCADE ON UPDATE CASCADE,
    CONSTRAINT fk_exigence_offre_competence
        FOREIGN KEY (competence_id) REFERENCES competence (competence_id)
        ON DELETE RESTRICT ON UPDATE CASCADE,
    CONSTRAINT ck_exigence_offre_statut_valide
        CHECK (statut_exigence IN ('E', 'S'))
);

-- -----------------------------------------------------------------------------
-- 3. Index B-Tree pour optimiser les jointures et les filtres récurrents
-- -----------------------------------------------------------------------------

CREATE INDEX idx_offre_rome_code       ON offre USING btree (rome_code);
CREATE INDEX idx_offre_type_contrat    ON offre USING btree (type_contrat);
CREATE INDEX idx_offre_code_insee      ON offre USING btree (code_insee);
CREATE INDEX idx_offre_date_publication ON offre USING btree (date_publication);
CREATE INDEX idx_offre_commune_contrat ON offre USING btree (code_insee, type_contrat);
CREATE INDEX idx_exigence_offre_competence ON exigence_offre USING btree (competence_id);
CREATE INDEX idx_commune_code_postal   ON commune USING btree (code_postal);
CREATE INDEX idx_entreprise_raison_sociale ON entreprise USING btree (raison_sociale);

COMMIT;
